--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "bcrypt": "^5.1.1",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
-    "next": "14.1.0",
+    "next": "14.1.3",
     "next-auth": "^4.24.6",
-    "node": "^21.6.2",
-    "react": "^18",
-    "react-dom": "^18"
+    "node": "^21.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "20.11.24",
